--- a/week-02/day-03/drawAllDay/CMakeLists.txt
+++ b/week-02/day-03/drawAllDay/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(SDL2_ROOT_PATH C:/SDL2-2.0.8)
 
-set(EXECUTABLES "draw;liner")
+set(EXECUTABLES "draw;liner;colorbox;diagonal;tocenter;rectangles;justForFun")
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 IF(WIN32)
