--- a/week-02/day-04/project/CMakeLists.txt
+++ b/week-02/day-04/project/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(SDL2_ROOT_PATH C:/SDL2-2.0.8)
 
-set(EXECUTABLES "draw;firstPart2;triangles;hexa;betterHexa;envelop;first")
+set(EXECUTABLES "draw;firstPart2;triangles;hexa;betterHexa;envelop;first;evenBetterHexa")
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 IF(WIN32)
