--- a/week-04/day-01/greenFox/CMakeLists.txt
+++ b/week-04/day-01/greenFox/CMakeLists.txt
@@ -3,4 +3,4 @@ project(greenFox)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(greenFox main.cpp Person.cpp Person.h Student.cpp Student.h Mentor.cpp Mentor.h Sponsor.cpp Sponsor.h)
+add_executable(greenFox main.cpp Person.cpp Person.h Student.cpp Student.h Mentor.cpp Mentor.h Sponsor.cpp Sponsor.h Cohort.cpp Cohort.h)
