add Flower, Tree, Garden classes to garden project

--- a/week-04/day-01/garden/CMakeLists.txt
+++ b/week-04/day-01/garden/CMakeLists.txt
@@ -3,4 +3,4 @@ project(garden)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(garden main.cpp Plant.cpp Plant.h)
+add_executable(garden main.cpp Plant.cpp Plant.h Flower.cpp Flower.h Tree.cpp Tree.h Garden.cpp Garden.h)
