create aircraft base class and derive F16, F35 classes from it

--- a/week-04/day-01/aircraftCarrier/CMakeLists.txt
+++ b/week-04/day-01/aircraftCarrier/CMakeLists.txt
@@ -3,4 +3,4 @@ project(aircraftCarrier)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(aircraftCarrier main.cpp)
+add_executable(aircraftCarrier main.cpp Aircraft.cpp Aircraft.h F16.cpp F16.h F35.cpp F35.h)
